Chapter 26 and 27 correx

--- a/content/4-case-studies/26.md
+++ b/content/4-case-studies/26.md
@@ -14,39 +14,39 @@ contributor:
   - first_name: "Naitzá"
     last_name: "Santiago Gómez"
     title: "Conservator"
-    affiliation: "Garza & Santiago Restauración"
+    affiliation: "Garza & Santiago Restauración, Mexico"
     sort_as: "2"
 keywords: "art, easel painting, canvas, conservation, New Spain"
-abstract: "The church of Saint Francis of Assisi Atizapan, located in the Mexican state of Mexico, houses a series of mid-eighteenth-century easel paintings made in the Viceroyalty of New Spain representing eleven apostles, Saint Paul, Christ, and the Virgin Mary. The paintings all correspond with each other aesthetically and technically. The paintings were restored during a six-month period in 2018, during which time it was possible to study them in depth. It was noteworthy to be able to analyze this pictorial set from a single anonymous author who was in tune with artists such as Miguel Cabrera, Francisco Vallejo, and Patricio Morlete, among others. The paintings are exceptional documents that give us very specific information on the technical and material challenges faced by an artist from New Spain in the middle of the eighteenth century."
+abstract: "The Church of Saint Francis of Assisi Atizapan, located in the Mexican state of Mexico, houses a series of mid-eighteenth-century easel paintings made in the Viceroyalty of New Spain representing eleven apostles, Saint Paul, Christ, and the Virgin Mary. The paintings all correspond with one another aesthetically and technically. The artworks were restored during a six-month period in 2018, during which time it was possible to study them in depth. It was noteworthy to be able to analyze this pictorial set from a single anonymous author who was in tune with artists such as Miguel Cabrera, Francisco Vallejo, and Patricio Morlete, among others. The paintings are exceptional documents that give us very specific information on the technical and material challenges faced by an artist from New Spain in the middle of the eighteenth century."
 ---
 
 ## Introduction
 
-A series of mid-eighteenth-century easel paintings depicting eleven apostles, Saint Paul, Christ, and the Virgin Mary, housed in the church of Saint Francis of Assisi Atizapan, in the Mexican state of Mexico, were restored in 2018. This afforded the authors the opportunity to study the set of paintings in depth.
+A series of mid-eighteenth-century easel paintings depicting eleven apostles, Saint Paul, Christ, and the Virgin Mary, housed in the Church of Saint Francis of Assisi Atizapan, in the Mexican state of Mexico, were restored in 2018. This afforded the authors the opportunity to study the set of paintings in depth.
 
-The paintings, which appear to be the work of a single artist, date from Mexico’s Viceregal period, and it is important to consider them in that context. The Spanish arrived in the Mexican territory in 1519, and two years later conquered the Aztec empire. In 1524, the Franciscans reached the Americas—starting the Catholic evangelization process in the former Aztec capital of Mexico-Tenochtitlan (now Mexico City) and surrounding territories ({% cite 'López Mora 2011' '14' %}).
+The paintings, which appear to be the work of a single artist, date from Mexico’s Viceregal period, and it is important to consider them in that context. The Spanish arrived in the Mexican territory in 1519, and two years later conquered the Aztec Empire. In 1524, the Franciscans reached the Americas—launching the Catholic evangelization process in the former Aztec capital of Mexico-Tenochtitlan (now Mexico City) and surrounding territories ({% cite 'López Mora 2011' '14' %}).
 
-Immediately after their arrival, the Franciscans started the evangelizing to the north of Mexico City, reaching the lands of Tlalnepantla, where they constructed their first church—the Church of the Corpus Christi—in the 1530s. About ten chapels that belonged to the Corpus Christi church were built some decades later. One of them was the chapel of San Francis of Assisi Atizapan, although the first chapel with that name was later demolished. The current church of Saint Francis was built in the 1750s.[^1] That decade corresponds with the creation of the paintings, which suggests that the Apostolate series was made for the new church ([fig. 26.1](#fig-26-1)). In addition to these paintings, the church houses another group depicting saints known as the Doctors of the Church, which was painted by Carlos Clemente Lopez, a *cacique*[^2] artist active during eighteenth century ({% cite 'Ramírez Montes 2001' %}\|, 106).
+Immediately after their arrival, the Franciscans started their evangelizing to the north of Mexico City, reaching the lands of Tlalnepantla, where they constructed their first church—the Church of the Corpus Christi—in the 1530s. About ten chapels that belonged to the Corpus Christi church were built some decades later. One of them was the chapel of San Francis of Assisi Atizapan, although the first chapel with that name was later demolished. The current church of Saint Francis was built in the 1750s.[^1] That decade corresponds with the creation of the paintings, which suggests that the Apostolate series was made for the new church ([fig. 26.1](#fig-26-1)). In addition to these paintings, the church houses another group depicting saints known as the Doctors of the Church, which was painted by Carlos Clemente Lopez, a *cacique*[^2] artist active during the eighteenth century ({% cite 'Ramírez Montes 2001' %}, 106).
 
 {% figure 'fig-26-1' %}
 
 ## The Apostolate Series
 
-We restored the apostolate easel paintings from June to November of 2018, during which we were guided by the words of Cesare Brandi: “The restoration—always understood in the professional field—is the ideal methodological moment to ask new questions to the works and, with it, add knowledge around them” ({% cite 'Brandi 2000' '6' %}).
+We restored the apostolate easel paintings from June to November of 2018, during which time we were guided by the words of Cesare Brandi: “The restoration—always understood in the professional field—is the ideal methodological moment to ask new questions to the works and, with it, add knowledge around them” ({% cite 'Brandi 2000' '6' %}).
 
-The opportunity to analyze a pictorial set painted by a single anonymous author—not just a single painting—was remarkable. Among the advantages that a group of works such as this presented us were summarized by conservator and researcher Elsa Arroyo when she said, “The artistic process and the way the materials were prepared for each strata of the paintings are indicative factors of the tradition of every artist and workshop of New Spain; therefore, technical studies are more relevant when they consider analysis of pictorial series, from the same artist or from the same context” ({% cite 'Arroyo Lemus 2017' '42' %}).
+The opportunity to analyze a pictorial set painted by a single anonymous author—not just a single painting—was remarkable. Among the advantages that a group of works such as this presented us were summarized by conservator and researcher Elsa Arroyo: “The artistic process and the way the materials were prepared for each strata of the paintings are indicative factors of the tradition of every artist and workshop of New Spain; therefore, technical studies are more relevant when they consider analysis of pictorial series, from the same artist or from the same context” ({% cite 'Arroyo Lemus 2017' '42' %}).
 
-The series represents the apostles with the instruments of their martyrdoms: Saint Peter, Saint Andrew, Saint James the Greater, Saint James the Lesser, Saint Bartholomew, Saint Philip, Saint John, Saint Jude Thaddeus, Saint Matthew, Saint Simon, and Saint Thomas. In addition to the apostles, Saint Paul, the Virgin Mary, and Jesus Christ were also painted. After cleaning the paintings, we realized that each included a part of the Apostles’ Creed. According to a legend based on the Acts of the Apostles, while gathered for Pentecost, they began to recite each of the articles of the Creed one by one ({% cite 'Schäfer 1983' '14' %}) ([fig. 26.2](#fig-26-2)). (In addition to this series, a painting of Pentecost by Antonio de Torres hangs in the church, completing the discourse, even though it is the work of a different painter.)
+The series represents the apostles with the instruments of their martyrdoms: Saint Peter, Saint Andrew, Saint James the Greater, Saint James the Lesser, Saint Bartholomew, Saint Philip, Saint John, Saint Jude Thaddeus, Saint Matthew, Saint Simon, and Saint Thomas. In addition to the apostles, Saint Paul, the Virgin Mary, and Jesus Christ were also painted. After cleaning the paintings, we realized that each included a part of the Apostles’ Creed. According to a legend based on the Acts of the Apostles, while gathered for Pentecost, they began to recite each of the articles of the Creed one by one ({% cite 'Schäfer 1983' '14' %}) ([fig. 26.2](#fig-26-2)). (In addition to this series, a painting of Pentecost by Antonio de Torres hangs in the church, completing the discourse, even though it is the work of a different artist.)
 
 {% figure 'fig-26-2' %}
 
-The paintings all correspond with each other aesthetically and technically, and also share the same basic materials. In each painting, the character appears full-length and occupying the foreground and most of the composition. This type of representation recalls the way in which the Spanish painter Francisco de Zurbarán painted some of his characters, and it stands as one of the key features inherited from the Spanish pictorial tradition.
+The paintings correspond with one another aesthetically and technically and share the same basic materials. In each painting, the character appears full length and occupying the foreground and most of the composition. This type of representation recalls the way in which the Spanish painter Francisco de Zurbarán painted some of his characters, and it stands as one of the key features inherited from the Spanish pictorial tradition.
 
 ## Research and Analysis
 
 The artist began the composition and the coloring of the paintings on the reddish iron oxide ground layer. The brushstrokes are soft, and the artist used glazes in dark tones and more painting in the light colors despite the fact that the pictorial layer is very thin and has no impastos. As well as these features, the way in which the compositions were solved, along with the technical and pictorial sequence, correspond to eighteenth-century painting production ({% cite 'Mues Orts 2017' '57' %}). Among the material evidence that helped us date the paintings is the presence of Prussian blue.[^3] Although it is unknown when the pigment was first used in New Spain, a painting studied by the Diagnostic Laboratory of Works of Art at the National University of Mexico evidenced its presence by the mid-eighteenth century ({% cite 'Zavala Cabello 2013' '144' %}). This anonymous series is also similar in painting technique to the works of contemporary artists such as Miguel Cabrera, José de Alzibar, Francisco Vallejo, and Patricio Morlete.
 
-As some researchers have pointed out, information is lacking about the practice of painters in documents, so approaching the subject through material analysis is the best way to expand knowledge of New Spanish artists’ techniques ({% cite 'Mues Orts 2017' '57' %}). For this reason, during the restoration we collected all the information we could about the paintings’ materials and technique: they have the same format and measurements, stratigraphy—strainers, priming layers, color layers, and varnishes—and chromatic palette. All the paintings have a linen textile support attached with animal glue to the edge of wooden strainers composed of five elements ([fig. 26.3](#fig-26-3)). About 12 x 11 threads per square centimeter form the fabric, and there is a Z-twist in the threads in both warp and weft ([fig. 26.4](#fig-26-4)).
+As some researchers have pointed out, information is lacking about the practice of painters in documents, so approaching the subject through material analysis is the best way to expand our knowledge of New Spanish artists’ techniques ({% cite 'Mues Orts 2017' '57' %}). For this reason, during the restoration we collected all the information we could about the paintings’ materials and technique: they have the same format and measurements, stratigraphy—strainers, priming layers, color layers, and varnishes—and chromatic palette. All the paintings have a linen textile support attached with animal glue to the edge of wooden strainers composed of five elements ([fig. 26.3](#fig-26-3)). Forming the fabric are 12 × 11 threads per square centimeter, and there is a Z-twist in the threads in both warp and weft ([fig. 26.4](#fig-26-4)).
 
 {% figure 'fig-26-3' %}
 
@@ -54,9 +54,9 @@ As some researchers have pointed out, information is lacking about the practice 
 
 We also noted very specific information regarding the technical and material challenges our mid-eighteenth-century artist faced and solved, specifically the relation of the textile support to other elements of the paintings, including the following:
 
--   The artist used the same method for all the paintings to attach the support to the strainer—using glue to adhere the support to the edge—but in some paintings he had to apply the original ground to the wood of the strainer to level the edges, because the fabric did not reach the outer edge of the strainer. This is painted over by the artist, so this process gives us important information that the painter painted directly onto the canvas fixed to the permanent strainer. There are no extended edges in any painting.
+-   The artist used the same method for all the paintings to attach the support to the strainer—using glue to adhere the support to the edge—but in some paintings he had to apply the original ground to the wood of the strainer to level the edges, because the fabric did not reach the outer edge of the strainer. This is painted over by the artist, so this process gives us important information that the paint was applied directly onto the canvas fixed to the permanent strainer. There are no extended edges in any painting.
 
--   He also had to stitch together two different pieces of fabric to achieve the desired size to fit the strainer. All the paintings measure 160 x 120 cm.
+-   He also had to stitch together two different pieces of fabric to achieve the desired size to fit the strainer. All the paintings measure 160 × 120 cm.
 
 -   Twelve of the paintings have regular patterns of perforations and marks made with iron gall ink ([fig. 26.5](#fig-26-5)).
 
@@ -66,33 +66,33 @@ We also noted very specific information regarding the technical and material cha
 
 After registering all these characteristics and doing additional research, we realized that the analysis of canvases had not been granted the importance it deserves. For example, many invasive processes have been carried out unnecessarily, such as wax-resin relining, practiced in Mexico since the 1970s, which resulted in important information being hidden or lost. The same thing happened to the original strainers: in almost every conservation treatment applied to a painting, they were discarded and a new one was substituted.
 
-It is also important to establish the context of the canvases in New Spain as background, which refers back to the history of canvases in Spain. Rocío Bruquetas, in her important book *The Technique of Painting in the Spanish Golden Age,* says that almost all the canvases used in Spain were imported from Germany, France, and the Netherlands, although some regions of Spain that produced linen, such as Galicia, el Bierzo, and Medina de Rioseco ({% cite 'Bruquetas Galán 2007' '104' %}).
+It is also important to establish the context of the canvases in New Spain as background, which refers back to the history of canvases in Spain. Rocío Bruquetas, in her important book *The Technique of Painting in the Spanish Golden Age*, writes that almost all the canvases used in Spain were imported from Germany, France, and the Netherlands, although some regions of Spain produced linen, such as Galicia, El Bierzo, and Medina de Rioseco ({% cite 'Bruquetas Galán 2007' '104' %}).
 
-Panel painting was gradually replaced by easel painting starting during the reign of Charles I (1516–1556), but contracts and other documents are not very specific regarding the material characteristics of the canvases. However, it is possible to find allusions to certain processes, such as the tension of the canvas to the frame or strainer and the construction of corners and crossbars ({% cite 'Bruquetas Galán 2007' '232, 248' %}).
+Panel painting was gradually replaced by easel painting starting in the reign of Charles I (1516–56), but contracts and other documents are not very specific regarding the material characteristics of the canvases. However, it is possible to find allusions to certain processes, such as the tension of the canvas to the frame or strainer and the construction of corners and crossbars ({% cite 'Bruquetas Galán 2007' '232, 248' %}).
 
-In late seventeenth century New Spain, some artists still painted on wood panels, depending on the painting’s intended placement. If it were to be placed in an altarpiece, a wood panel would probably have been preferred. About such preferences, the painters’ guild ordinances of 1587 mentioned that canvases shouldn’t be reused and prohibited painting over an existing painting ({% cite 'Carrillo y Gariel 1946' '95' %}).
+In late seventeenth-century New Spain, some artists still painted on wood panels, depending on the painting’s intended placement. If it were to be placed in an altarpiece, a wood panel probably would have been preferred. About such preferences, the painters’ guild ordinances of 1587 mentioned that canvases shouldn’t be reused and prohibited painting over an existing painting ({% cite 'Carrillo y Gariel 1946' '95' %}).
 
-With regard specifically to canvases in Viceregal Mexico, the art conservator Rita Sumano is the only person to have studied in detail the canvases of New Spanish paintings. Her research was enriched by the analysis of more than a hundred paintings restored in the National School of Conservation. Thanks to her research, we know now that almost all New Spanish canvases from the seventeenth and eighteenth centuries were made from linen ({% cite 'Sumano González 2010' '4, 5' %}). We also know that 13% of the canvases analyzed from the eighteenth century have patterns of perforations and, of that percentage, 40% do not have selvages, which she interpreted as a sign of a lack of materials ({% cite 'Sumano González 2010' '33' %}). Importantly, the information we can obtain from the analysis of canvases also gives us information about their origin, distribution, and the loom that was used to make the textiles ({% cite 'Siracusano 2005' '18' %}).
+With regard specifically to canvases in Viceregal Mexico, art conservator Rita Súmano is the only person to have studied in detail the canvases of New Spanish paintings. Her research was enriched by the analysis of more than a hundred paintings restored in the National School of Conservation. Thanks to her research, we know now that almost all New Spanish canvases from the seventeenth and eighteenth centuries were made from linen ({% cite 'Sumano González 2010' '4, 5' %}). We also know that 13% of the canvases analyzed from the eighteenth century have patterns of perforations and, of that percentage, 40% do not have selvages, which she interpreted as a sign of a lack of materials ({% cite 'Sumano González 2010' '33' %}). Importantly, the information we can obtain from the analysis of canvases also gives us information about their origin, distribution, and the loom that was used to make the textiles ({% cite 'Siracusano 2005' '18' %}).
 
 Trade between Spain and New Spain was fundamental in many aspects. Textiles were exported from Spain and other parts of Europe to New Spain, as were other materials, including pigments, lacquers, oils, and brushes ({% cite 'Arroyo Lemus 2017' '37' %}). In the case of the canvases we studied, twelve of the fourteen paintings have reused textile supports, evidenced by the patterns of perforations and ferro-gallic ink marks already mentioned. These features provide specific clues as to the fabrics’ acquisition by the artist: as mentioned, the paintings.
 
-Objects traded between Spain and New Spain were marked by the cargador (importer). For example, lightweight sculptures made of cornstalks from the sixteenth and seventeenth centuries in New Spain are found in Spain. Pablo Amador found the mark of the *cargador* who brought such a sculpture of Christ from New Spain to Spain in 1673 ({% cite 'Amador Marrero 2012' '744' %}). Many goods at the time were transported in bales wrapped in fabric (including linen), which were numbered and marked with the importer’s initials. Artists obtained the linen wrappings to use as the canvas supports for their paintings.
+Objects traded between Spain and New Spain were marked by the cargador (importer). For example, lightweight sculptures made of cornstalks from the sixteenth and seventeenth centuries in New Spain are found in Spain. Pablo Amador found the mark of the cargador who brought such a sculpture of Christ from New Spain to Spain in 1673 ({% cite 'Amador Marrero 2012' '744' %}). Many goods at the time were transported in bales wrapped in fabric (including linen), which were numbered and marked with the importer’s initials. Artists obtained the linen wrappings to use as the canvas supports for their paintings.
 
-A painting entitled *The Customs Yard* from 1775 by Nicolas-Bernard Lépicié, depicts traders with their merchandise bundled in bales that have similar marks.[^4] Another painting, one from the Basilica de la Virgen de la Soledad in Oaxaca, painted in 1740, depicts an *ex-voto* (votive offering) that expressed the donor’s gratitude to the Virgin for her intercession after an earthquake. The donor of this interesting painting was a wealthy merchant, and, in accordance with his trade, the scene takes place inside his house, where some marked bales lie on the floor.
+A painting titled *The Customs Yard* from 1775, by Nicolas-Bernard Lépicié, depicts traders with their merchandise bundled in bales that have similar marks.[^4] Another painting, one from the Basilica de la Virgen de la Soledad in Oaxaca, painted in 1740, depicts an ex-voto (votive offering) that expressed the donor’s gratitude to the Virgin for her intercession after an earthquake. The donor of this interesting painting was a wealthy merchant, and, in accordance with his trade, the scene takes place inside his house, where some marked bales lie on the floor.
 
-In light of this evidence, we concluded that the canvases of the Apostolate paintings were made from the linen coverings of bales, which the artist bought to paint on. These merchant marks are also found in other important New Spanish paintings, such as the *Release of Saint Peter* by Pedro Ramirez and Miguel Cabrera’s *Holy Family* (both in the National Museum of the Viceroyalty), in others by Juan Correa, and in other anonymous paintings, such as a Virgin of Guadalupe from the Convent of Santa Brígida in Mexico City.
+In light of this evidence, we concluded that the canvases of the Apostolate paintings were made from the linen coverings of bales, which the artist bought to paint on. These merchant marks are also found in other important New Spanish paintings, such as *The Release of Saint Peter* by Pedro Ramirez and Miguel Cabrera’s *Holy Family* (both in the National Museum of the Viceroyalty), in works by Juan Correa, and in other, anonymous paintings, such as a Virgin of Guadalupe from the Convent of Santa Brígida in Mexico City.
 
-In addition to the merchant marks, perforations in the canvases are also related to the supports’ original use. According to Paula Mues, “Repurposing canvases was also a common practice, whether by painting over existing works or by using fabrics that had defects or had been reclaimed from industrial processes. This explains why we often find canvases with a regular pattern of perforations, which were generally repaired by covering the holes with pieces of paper” ({% cite 'Mues Orts 2017' %}\|, 57).
+In addition to the merchant marks, perforations in the canvases are related to the supports’ original use. According to Paula Mues, “Repurposing canvases was also a common practice, whether by painting over existing works or by using fabrics that had defects or had been reclaimed from industrial processes. This explains why we often find canvases with a regular pattern of perforations, which were generally repaired by covering the holes with pieces of paper” ({% cite 'Mues Orts 2017' %}, 57).
 
 These features provided the guidelines to the conservation treatments applied to the canvases.
 
 ## Treatment
 
-We started by cleaning the surface of the canvas by removing dust and debris using a vacuum and brushes. Then we proceeded to eliminate newer interventions on the canvases, such as several patches made from different types and colors of textiles. When we removed them, we realized many were not the appropriate size, and some of weren’t even covering a hole or tear but were just adhered to strengthen the surface. Over some small holes we applied linen fibers with glue paste.
+We started by cleaning the surface of the canvas by removing dust and debris using a vacuum and brushes. Then we proceeded to eliminate newer interventions on the canvases, such as several patches made from different types and colors of textiles. When we removed them, we realized many were not the appropriate size, and some weren’t even covering a hole or tear but were simply adhered to strengthen the surface. Over some small holes we applied linen fibers with glue paste.
 
-Most of the canvases had deformations. To eliminate them, we applied moisture and pressure, allowing it to return to its original flat state.
+Most of the canvases had deformations. To eliminate them, we applied moisture and pressure, allowing the canvas to return to its original flat state.
 
-The corrosive nature of the iron gall ink markings on the back of the supports caused some deterioration and tears in the textile. To care for this damage we had to find a method that allowed for the stabilization of the canvas without covering the information of the marks ([fig. 26.6a](#fig-26-6-a)). We used silk crepeline, with Beva as an adhesive. As a thin, transparent textile with good mechanical resistance, the silk crepeline made it possible to conserve both the materials and the information ([fig. 26.6b](#fig-26-6-b)).[^5] Finally, for the holes of the paintings without iron-gall ink marks, we used linen patches with frayed edges, adhered with glue paste.
+The corrosive nature of the iron gall ink markings on the back of the supports caused some deterioration and tears in the textile. To care for this damage, we had to find a method that allowed for the stabilization of the canvas without covering the information in the marks ([fig. 26.6a](#fig-26-6-a)). We used silk crepeline, with Beva as an adhesive. As a thin, transparent textile with good mechanical resistance, the silk crepeline made it possible to conserve both the materials and the information ([fig. 26.6b](#fig-26-6-b)).[^5] Finally, for the holes of the paintings without iron gall ink marks, we used linen patches with frayed edges, adhered with glue paste.
 
 {% figuregroup '2' 'fig-26-6-a, fig-26-6-b' '*Saint Matthew* painting: canvas with iron gall ink marks: (a) before treatment, (b) after treatment. Image: Claudia Garza / Archdiocese of Ttalnepantla' %}
 
@@ -100,11 +100,11 @@ The corrosive nature of the iron gall ink markings on the back of the supports c
 
 Conservators usually treat isolated paintings or less numerous sets than the Apostolate series. In this case, having in our hands a series of fourteen paintings, we were able to find similarities and correspondences between technical and material solutions. Although several of these characteristics are common in the pictorial production of New Spain, it is very important to emphasize that these features determine the kind of intervention to be performed, which must always respect the original materials and should strive for minimal intervention.
 
-Most studies on Viceregal painting focus on the works by important known painters. However, as our case study demonstrates, anonymous paintings have much to offer as well. This series, which could have gone otherwise unnoticed, has allowed us to collect important information that provides valuable historical data concerning the artist, how we worked, and the ways in which he obtained his materials almost three hundred years ago. Finally, we would like to insist on the importance of sharing knowledge and experiences in publications such as this one, which allow us to spread results, both positive and negative, because it all enriches us not only as individuals but as a community.
+Most studies on Viceregal painting focus on the works by important known painters. However, as our case study demonstrates, anonymous paintings have much to offer as well. This series, which could have gone otherwise unnoticed, has allowed us to collect important information that provides valuable historical data concerning the artist, how he worked, and the ways in which he obtained his materials almost three hundred years ago. Finally, we would like to emphasize the importance of sharing knowledge and experiences in publications such as this one, which allows us to disseminate results, both positive and negative, because it enriches us not only as individuals but also as a community.
 
 ## Acknowledgments
 
-We would like to thank the organizers of the Conserving Canvas Symposium, Yale University and the Getty Foundation, for their efforts and interest in our work. We are also very grateful to Monsignor Carlos Samaniego, who was the parish priest of the church that houses the series of paintings discussed in this presentation. Our thanks also to Cardinal Carlos Aguiar Retes for his trust, and to Dr. Pablo Amador for being a friend and for sharing his knowledge with us.
+We would like to thank the organizers of the Conserving Canvas symposium, Yale University and the Getty Foundation, for their efforts and interest in our work. We are also very grateful to Monsignor Carlos Samaniego, who was the parish priest of the church that houses the series of paintings discussed in this presentation. Our thanks also to Cardinal Carlos Aguiar Retes for his trust, and to Dr. Pablo Amador for being a friend and for sharing his knowledge with us.
 
 {% backmatter %}
 
@@ -112,12 +112,12 @@ We would like to thank the organizers of the Conserving Canvas Symposium, Yale U
 
 {% endbackmatter %}
 
-[^1]: Documents about the construction of the new church are housed in the Historical Archive of Tlalnepantla; they deal with a lawsuit involving the benefactors of the church. Personal communication with Rebeca López Mora, historian in charge of the archive and a specialist in the history of Tlalnepantla May 5, 2018.
+[^1]: Documents about the construction of the new church are housed in the Historical Archive of Tlalnepantla; they deal with a lawsuit involving the benefactors of the church. Personal communication with Rebeca López Mora, historian in charge of the archive and a specialist in the history of Tlalnepantla, May 5, 2018.
 
-[^2]: A high-caste indigenous person. See <https://read.dukeupress.edu/hahr/article/76/3/475/144916/The-Caciques-of-Tecali-Class-and-Ethnic-Identity>.
+[^2]: A high-caste Indigenous person. See <https://read.dukeupress.edu/hahr/article/76/3/475/144916/The-Caciques-of-Tecali-Class-and-Ethnic-Identity>.
 
 [^3]: We did not carry out analyses, but the blue shades achieved are typical of this pigment.
 
 [^4]: Collection of the Thyssen-Bornemisza Museum in Madrid; see <https://www.museothyssen.org/coleccion/artistas/lepicie-nicolas-bernard/patio-aduana>.
 
-[^5]: In 2017 we visited the studio of Matteo Rossi-Doria, in Rome. He kindly shared his knowledge and materials with us for the treatment of textile supports, and we are very grateful to him for sharing this silk crepeline technique with us.
+[^5]: In 2017, we visited the studio of Matteo Rossi-Doria, in Rome. He kindly shared his knowledge and materials with us for the treatment of textile supports, and we are very grateful to him for sharing this silk crepeline technique with us.
