--- a/content/5-adhesives/27.md
+++ b/content/5-adhesives/27.md
@@ -126,7 +126,7 @@ Samples of degraded cotton canvas were measured by tensile testing at 20% RH (2
 
 DMA-RH cycling was performed under programmed RH and fixed temperature (25°C) conditions to assess the mechanical response of the canvases to fluctuations in RH. Canvases made of natural or synthetic fibers are viscoelastic materials, meaning that their mechanical response to external stress depends on the rate of stress applied in tensile tests or frequency. It also means that they can exhibit both elastic and viscous behaviors. DMA was introduced into the evaluation of paintings conservation to measure both the elastic (storage) modulus, *E'*, and viscous (loss) modulus, *E''*, components in the mechanical response of samples from paintings. Its first use was to measure the glass transition temperature of paint films ({% cite 'Hedley et al. 1991' %}), and was subsequently used in studies of painting canvases ({% cite 'Odlyha, Chan, and Pages 1995' %}; {% cite 'Foster, Odlyha, and Hackney 1997' %}).
 
-For this study, a new protocol was developed (involving programmed RH cycling between low and high RH levels) based on studies of the viscoelastic response to RH variations of electrospun nanocellulose composite nanofibers by Peresin et al. ({% cite 'Peresin et al. 2010' %}). This protocol was recently applied to evaluate the effects of environmental conditions and conservation treatments on painting canvases ({% cite 'Bridarolli et al. 2018a' %}; {% cite 'Bridarolli et al. 2020' '' '2020' %}). The RH range for the tests (from 20% to 80% RH) was selected so that the current study could be correlated with previous studies on the response of painting materials to moisture, which often take values between 10% and 90% RH ({% cite 'Andersen 2013' %}; {% cite 'Hedley 1988' %}; {% cite 'Mecklenburg 2007a' %}; {% cite 'Wood et al. 2018' %}).
+For this study, a new protocol was developed (involving programmed RH cycling between low and high RH levels) based on studies of the viscoelastic response to RH variations of electrospun nanocellulose composite nanofibers by Peresin et al. ({% cite 'Peresin et al. 2010' %}). This protocol was recently applied to evaluate the effects of environmental conditions and conservation treatments on painting canvases ({% cite 'Bridarolli et al. 2018a' %}, {% cite 'Bridarolli et al. 2020' '' '2020' %}). The RH range for the tests (from 20% to 80% RH) was selected so that the current study could be correlated with previous studies on the response of painting materials to moisture, which often take values between 10% and 90% RH ({% cite 'Andersen 2013' %}; {% cite 'Hedley 1988' %}; {% cite 'Mecklenburg 2007a' %}; {% cite 'Wood et al. 2018' %}).
 
 Canvas samples, typically 7 × 15 mm, were tested in tension at 1 Hz in the warp direction. A preload (1 N) was applied to avoid buckling of the samples.
 
@@ -176,7 +176,7 @@ Visual assessment as well as handling properties of the treatments were evaluate
 
 Following these evaluations, further mechanical tests were carried out using one of the lining canvases found in Böhme’s study ({% cite 'Böhme et al. 2020' %}). The protocol developed for these tests enabled assessment of the treatments on more representative canvases (historical material, naturally aged, soiled, and with traces of one or more glues), while minimizing the variability due to the inhomogeneous nature of these materials. For these final tests, the water-based and heptane-based nanocomposites tested were mixed with deacidification agents: CaCO<sub>3</sub> and MgO, respectively. The presence of CaCO<sub>3</sub> had been shown not to affect the reinforcement provided by MC+CNC in water ({% cite 'Bridarolli 2019' %}). Canvases treated with the solvents used in the treatments were also tested in order to isolate the impact of the treatment from the solvent itself.
 
-[Figure 27.4](#fig-27-4) shows the calculated percentage increase in storage modulus *E'* (30% RH, 25°C, 30 min. equilibration) measured for the linen canvas samples and resulting from the application of the treatments. All led to the consolidation of the historical canvases, seen in the increase in stiffness (*E'*). The greatest increase in *E'* was reached with the MC+CNC+CaCO<sub>3</sub> (w) treatment (increase of 126% ±30%), followed by CNF (83% ±24%) and CCNF (53% ±17%). The high level of stiffening reached using MC+CNC+CaCO<sub>3</sub> (w) was not observed for its counterpart, the heptane-based treatment MC + CNC + MgO (h) (25 ±10%), nor was it for the multilayered NPs (20% ±17%). The limited consolidation conferred by the latter on the historical linen canvas calls for further research, as this contradicts previous tensile testing results performed on degraded modern cotton canvases (see [table 27.1](#table-27-1)).
+[Figure 27.4](#fig-27-4) shows the calculated percentage increase in storage modulus *E'* (30% RH, 25°C, 30 min. equilibration) measured for the linen canvas samples and resulting from the application of the treatments. All led to the consolidation of the historical canvases, seen in the increase in stiffness (*E'*). The greatest increase in *E'* was reached with the MC+CNC+CaCO<sub>3</sub> (w) treatment (increase of 126% ±30%), followed by CNF (83% ±24%) and CCNF (53% ±17%). The high level of stiffening reached using MC+CNC+CaCO<sub>3</sub> (w) was not observed for its counterpart, the heptane-based treatment MC+CNC+MgO (h) (25 ±10%), nor was it for the multilayered NPs (20% ±17%). The limited consolidation conferred by the latter on the historical linen canvas calls for further research, as this contradicts previous tensile testing results performed on degraded modern cotton canvases (see [table 27.1](#table-27-1)).
 
 {% figure 'fig-27-4' %}
 
